# aios-chat

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecars/node-backend/: package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/sidecars/node-backend/src/: config.ts  index.ts  types.ts
src-tauri/sidecars/node-backend/src/agent/: orchestrator.ts  sessions.ts  websocket.ts
src-tauri/sidecars/node-backend/src/chat/: context.ts  providers.ts  system-prompt.ts
src-tauri/sidecars/node-backend/src/mcp/: firecrawl-server.ts  servers.ts  tools.ts
src-tauri/sidecars/node-backend/src/tools/: builtin.ts  perplexity.ts
src-tauri/src/: credentials.rs  lib.rs  main.rs
src-tauri/src/commands/: messages.rs  mod.rs  settings.rs  threads.rs
src-tauri/src/db/: messages.rs  mod.rs  schema.rs  threads.rs
src/components/agent/: AgentTaskItem.tsx  AgentTaskPanel.tsx  index.ts
src/components/chat/: AskUserQuestion.tsx  ChatThread.tsx  DynamicUI.tsx  Markdown.tsx  ToolDisplay.tsx
src/components/document/: DocumentPanel.tsx
src/components/layout/: CommandPalette.tsx  (+5 more)
src/contexts/: ModalContext.tsx  ThemeContext.tsx
src/hooks/: useAgentSession.ts  useChatRuntime.ts  usePersistence.ts  useThreads.ts
src/lib/: ai-providers.ts  ai.ts  config.ts  credentials.ts  settings-persistence.ts  settings-registry.ts  tauri.ts  themes.ts
src/stores/: document-store.ts
src/types/: agent.ts  message.ts  thread.ts
(+22 files in other folders)
